--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,6 +35,7 @@ jobs:
           cache: 'npm'
 
       - run: npm install
+      - run: cd mygame
       - run: npm run build
       - run: npm run bundle
 
