--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,9 +33,9 @@ jobs:
         with:
           node-version: '20.x'
           cache: 'npm'
-
       - run: npm install
       - run: cd mygame
+      - run: npm install
       - run: npm run build
       - run: npm run bundle
 
