--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -34,10 +34,7 @@ jobs:
           node-version: '20.x'
           cache: 'npm'
       - run: npm install
-      - run: cd mygame
-      - run: npm install
-      - run: npm run build
-      - run: npm run bundle
+      - run: cd mygame && npm install && npm run build && npm run bundle
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
