--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install Dependencies
         run: bun i --force
       - name: Build
-        run: bun run build
+        run: bun run build --base /Slime-Quest
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
